// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileGrid 2 Columns renders correctly 1`] = `
<div
  class="fd-tile-grid fd-tile-grid--2col"
>
  <div>
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
  </div>
</div>
`;

exports[`TileGrid 6 Columns renders correctly 1`] = `
<div
  class="fd-tile-grid fd-tile-grid--6col"
>
  <div>
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
    <vuecomponent-stub
      description="Lorem ipsum"
    />
  </div>
</div>
`;
